--- a/src/scss/60-components/_c-navbar.scss
+++ b/src/scss/60-components/_c-navbar.scss
@@ -11,9 +11,33 @@
 
 // end move this mixin to style-chunks
 
+html {
+  // overflow-y: auto;
+}
+
+body {
+  // overflow-x: hidden;
+}
+
 .o-nav__container {
   max-width: 100vw;
-  overflow: hidden;
+  overflow-y: visible;
+  // z-index to prevent modal bg affecting border color
+  position: relative;
+  z-index: 1000;
+
+  .modal--nav {
+    &:before {
+      content: '';
+      border-top: 1px solid $light-grey;
+      display: block;
+    }
+    &:after {
+      content: '';
+      border-bottom: 1px solid $light-grey;
+      display: block;
+    }
+  }
 }
 
 // off canvas display, padding rules
@@ -56,8 +80,9 @@
     display: none;
   }
 
-  .c-navbar__container {
-    @include border-tb-default(1px);
+  .modal--nav{
+    // @include border-tb-default(1px);
+    // border: 1px solid green;
   }
 
   .navbar__top-item {
